	(ipmi_calculate_keys): Renamed to
	ipmi_calculate_rmcpplus_session_keys.

	* libfreeipmi/src/ipmi-rmcpplus-utils.c
	(ipmi_calculate_rmcpplus_session_keys): Modified for session keys
	only, not pre-session/rakp keys.

	* libfreeipmi/src/ipmi-error.c (ipmi_strerror_r),
	libfreeipmi/include/freeipmi/ipmi-comp-code-spec.h: Additional
	commands supported.  Cleanup.

	
	
2005-03-12  Albert Chu <chu11@llnl.gov>

	* fish/extension/bc-rmcpplus-conf-privilege-section.scm: New file.

	* fish/: Add rmcpplus cipher id configuration.

	* ipmipower/: Globally change "chassis_status" ->
	"get_chassis_status" to match ipmi spec.  General code cleanup.

	* ipmipower/src/ipmipower_packet.c (ipmipower_packet_errmsg):
	Support RAKP error messages.

	* ipmipower/src/ipmipower_powercmd.c (_recv_packet): Support RAKP
	error messages.

2005-03-11  Albert Chu <chu11@llnl.gov>

	* ipmipower/src/ipmipower_powercmd.c (_process_ipmi_packets): Add
	additional checks for authentication_type returned from activate
	session response.

	* ipmipower/src/ipmipower_packet.h,
	ipmipower/src/ipmipower_packet.c (ipmipower_packet_response_data):
	Removed function.

	* ipmipower/src/ipmipower_packet.c (ipmipower_packet_errmsg):
	Adjust for function removal.

	* ipmipower/src/ipmipower_wrappers.h,
	ipmipower/src/ipmipower_wrappers.c (Fiid_obj_get_data): New
	function.

	* libfreeipmi/src/ipmi-rmcpplus-utils.c,
	libfreeipmi/include/freeipmi/ipmi-rmcpplus-utils.h
	(ipmi_rmcpplus_check_session_trlr): Renamed to
	ipmi_rmcpplus_check_packet_session_authentication_code for
	consistency.
	
	* ipmipower/src/ipmipower_powercmd.c (_recv_packet),
	ipmipower/src/ipmipower_check.h, ipmipower/src/ipmipower_check.c:
	Completely redo packet checking for IPMI 1.5.  Add full checks for
	IPMI 2.0.

	
2005-03-10  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/ipmi-lan-utils.c,
	libfreeipmi/include/freeipmi/ipmi-lan-utils.h
	(ipmi_lan_check_checksum): Renamed to
	ipmi_lan_check_packet_checksum.
